--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GSC</title>
+    <title>Gamma Solusi Optima</title>
 
     <!-- font awesome cdn link  -->
     <link
@@ -33,7 +33,7 @@
       <i class="fa fa-bars"></i>
   </button> -->
 
-      <a href="#" class="logo">Jasa Sondir<br /><span>Jakarta</span></a>
+      <a href="#" class="logo">Gamma Solusi<br /><span>Optima</span></a>
 
       <nav class="navbar">
         <a href="index.html">home</a>
