--- a/index.html
+++ b/index.html
@@ -33,23 +33,27 @@
       <i class="fa fa-bars"></i>
   </button> -->
 
-      <a href="#" class="logo">Gamma Solusi<br /><span>Optima</span></a>
+      <div class="logo-container">
+        <a href="#" class="logo">
+            <img src="images/logo.png" alt="Gamma Solusi Logo">
+            <div class="logo-text">
+                Gamma Solusi<br /><span>Optima</span>
+            </div>
+        </a>
+      </div>
 
       <nav class="navbar">
         <a href="index.html">home</a>
         <a href="about.html" target="_blank">about</a>
         <a href="services.html" target="_blank">services</a>
         <a href="projects.html" target="_blank">projects</a>
-        <!--<a href="#pricing">pricing</a>-->
         <a href="contact.html" target="_blank">contact</a>
-        <!-- <a href="blogs.html" target="_blank">blogs</a> -->
       </nav>
 
       <div class="icons">
         <div id="menu-btn" class="fas fa-bars"></div>
         <div id="info-btn" class="fas fa-info-circle"></div>
         <div id="search-btn" class="fas fa-search"></div>
-        <!-- <div id="login-btn" class="fas fa-user"></div> -->
       </div>
 
       <form action="" class="search-form">
@@ -75,7 +79,7 @@
       <div class="info">
         <i class="fas fa-envelope"></i>
         <h3>email address</h3>
-        <p>office@gamma-sc.com</p>
+        <p>office@testanah.com</p>
       </div>
 
       <div class="info">
@@ -159,12 +163,7 @@
 
     <section class="about" id="about">
       <h1 class="heading">about us</h1>
-
       <div class="row">
-        <div class="video">
-          <video src="images/about-vid.mp4" loop muted autoplay></video>
-        </div>
-
         <div class="content">
           <h3>One Stop Service layanan penyelidikan tanah</h3>
           <p>
@@ -181,31 +180,11 @@
           </p>
           <a href="about.html" class="btn">Diskusikan dengan kami</a>
         </div>
+
+        <div class="video">
+          <video src="images/about-vid.mp4" loop muted autoplay></video>
+        </div>
       </div>
-
-      <!-- <div class="box-container">
-
-      <div class="box">
-         <h3>5+</h3>
-         <p>years of experience</p>
-      </div>
-
-      <div class="box">
-         <h3>100+</h3>
-         <p>project completed</p>
-      </div>
-
-      <div class="box">
-         <h3>90+</h3>
-         <p>satiesfied clients</p>
-      </div>
-
-      <div class="box">
-         <h3>10+</h3>
-         <p>active workers</p>
-      </div>
-
-   </div> -->
     </section>
     <!-- about section ends -->
 
@@ -218,7 +197,7 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide slide">
                 <div class="image">
-                  <img src="images/bor-1.jpg" alt="" />
+                  <img src="images/sondir-1.jpg" alt="" />
                 </div>
                 <div class="content">
                   <h3>Sondir (CPT)</h3>
@@ -231,7 +210,7 @@
     
               <div class="swiper-slide slide">
                 <div class="image">
-                  <img src="images/sondir-1.jpg" alt="" />
+                  <img src="images/bor-1.jpg" alt="" />
                 </div>
                 <div class="content">
                   <h3>Boring (SPT)</h3>
@@ -766,7 +745,7 @@ Ensure the safety and stability of your construction project with our experience
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.8530222222453!2d106.917887109896!3d-6.283044193679571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e698d4ef794b2a7%3A0x506cc32ad1421286!2sJl.%20Gelatik%20No.10%2C%20RT.002%2FRW.002%2C%20Jatimakmur%2C%20Kec.%20Pd.%20Gede%2C%20Kota%20Bks%2C%20Jawa%20Barat%2017411!5e0!3m2!1sid!2sid!4v1706106838371!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         <form action="form-action.php" method="post">
-          <h3>Contact Us Today!</h3>
+          <h3>Jasa Sondir & Konsultan Geoteknik</h3>
           <input type="text" placeholder="Name" name="name" class="box" />
           <input type="email" placeholder="Email" name="email" class="box" />
           <input type="number" placeholder="Phone" name="phone" class="box" />
@@ -936,10 +915,10 @@ Ensure the safety and stability of your construction project with our experience
             <i class="fas fa-phone"></i> +62-817-7071-9933</a
           >
           <a
-            href="mailto:office@gamma-sc.com? 
+            href="mailto:office@testanah.com? 
          subject=subject text"
           >
-            <i class="fas fa-envelope"></i> office@gamma-sc.com</a
+            <i class="fas fa-envelope"></i> office@testanah.com</a
           >
           <a href="https://maps.app.goo.gl/RN9RTTnRy25XPKXc7" target="_blank">
             <i class="fas fa-map"></i> Bekasi, Indonesia - 40286</a
