--- a/index.html
+++ b/index.html
@@ -162,9 +162,10 @@
     <!-- about section start -->
 
     <section class="about" id="about">
-      <h1 class="heading">about us</h1>
+      
       <div class="row">
         <div class="content">
+          <h1 class="heading">about us</h1>
           <h3>One Stop Service layanan penyelidikan tanah</h3>
           <p>
             Tim Ahli Geoteknik kami berpengalaman dalam menangani dan memberi rekomendasi teknis untuk penanganan berbagai macam project dari mulai bangunan lokal hingga project infrastruktur nasional. 
@@ -182,7 +183,7 @@
         </div>
 
         <div class="video">
-          <video src="images/about-vid.mp4" loop muted autoplay></video>
+          <video src="images/about-vid-1.mp4" loop muted autoplay></video>
         </div>
       </div>
     </section>
