Update header and footer

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                   <p>
                     Pengambilan sample tanah yang dilakukan per layer, yang dilanjutkan dengan SPT per interval tertentu.
                   </p>
-                  <a href="https://wa.me/6281770719933 " class="btn">order jasa sondir <i class="fab fa-whatsapp"></i></a>
+                  <a href="https://wa.me/6281770719933 " class="btn">order jasa bor <i class="fab fa-whatsapp"></i></a>
                 </div>
               </div>
     
@@ -231,7 +231,7 @@
                   <p>
                     untuk mengetahui sifat dan karakteristik tanah, Hasil dari uji laboratorium akan di korelasikan dengan hasil uji lapangan sehingga dapat didesain dimensi pondasi yang aman dan efisien.
                   </p>
-                  <a href="https://wa.me/6281770719933 " class="btn">order jasa sondir <i class="fab fa-whatsapp"></i></a>
+                  <a href="https://wa.me/6281770719933 " class="btn">order jasa lab <i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
           </div>
