--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
 
     <section class="about1">
       <div class="video1">
-        <video src="images/about-vid.mp4" loop muted autoplay></video>
+        <video src="images/about-vid-1.mp4" loop muted autoplay></video>
       </div>
 
       <div class="content1">
