--- a/services.html
+++ b/services.html
@@ -115,67 +115,54 @@
 
 </section>
 
-<!-- services section starts -->
+<!-- service section starts  -->
 
-<section class="services" id="services">
+<section class="blogs" id="blogs">
+   <h1 class="heading">our services</h1>
 
-   <h1 class="heading"> our services </h1>
+   <div class="swiper blogs-slider">
+     <div class="swiper-wrapper">
+       <div class="swiper-slide slide">
+         <div class="image">
+           <img src="images/sondir-1.jpg" alt="" />
+         </div>
+         <div class="content">
+           <h3>Sondir (CPT)</h3>
+           <p>
+             Jasa Pengetesan tanah dengan menggunakan mesin sondir atau Cone Penetration Test dengan tujuan menentukan daya dukung tanah
+           </p>
+           <a href="https://wa.me/6281770719933 " class="btn">order jasa sondir <i class="fab fa-whatsapp"></i></a>
+         </div>
+       </div>
 
-   <div class="box-container">
+       <div class="swiper-slide slide">
+         <div class="image">
+           <img src="images/bor-1.jpg" alt="" />
+         </div>
+         <div class="content">
+           <h3>Boring (SPT)</h3>
+           <p>
+             Pengambilan sample tanah yang dilakukan per layer, yang dilanjutkan dengan SPT per interval tertentu.
+           </p>
+           <a href="https://wa.me/6281770719933 " class="btn">order jasa bor <i class="fab fa-whatsapp"></i></a>
+         </div>
+       </div>
 
-      <div class="box">
-         <img src="images/service-5.png" alt="Civil & Infrastructure Planning">
-         <h3>Infrastructure Planning</h3>
-         <p>Infrastructure Planning is the process of planning, developing, and managing infrastructure systems required to support community needs, such as roads, bridges, water networks, drainage, and other public facilities. This service involves analyzing the infrastructure needs required to support the growth and development of a community, and selecting the best solutions to achieve them.</p>
-      </div>
-
-      <div class="box">
-         <img src="images/service-6.png" alt="Geotechnical Design">
-         <h3>Geotechnical Design</h3>
-         <p>Geotechnical Design is the process of designing and engineering geotechnical systems, such as foundations, slopes, and earthworks, to ensure their stability and safety. It is aimed at helping clients design geotechnical systems that are safe, cost-effective, and sustainable.</p>
-      </div>
-
-      <div class="box">
-         <img src="images/service-1.png" alt="Geotechnical Survey">
-         <h3>Geotechnical Survey</h3>
-         <p>Geotechnical Survey is the process of collecting and analyzing data on the geotechnical characteristics of a site, such as soil and rock properties, to assess their suitability for a particular project. It is aimed at helping clients understand the geotechnical characteristics of a site and make informed decisions about its use and development.</p>
-      </div>
-
-      <div class="box">
-         <img src="images/service-8.png" alt="Drafting Service">
-         <h3>Drafting Service</h3>
-         <p>Drafting Service is the process of creating detailed technical drawings and plans, such as architectural, structural, and mechanical drawings, to communicate design concepts and specifications. This service involves using computer-aided design (CAD) software to create accurate and visually appealing drawings, and working with clients to ensure that the final product meets their needs and expectations.</p>
-      </div>
-
-      <div class="box">
-         <img src="images/service-4.png   " alt="Drafting Service">
-         <h3>Geophysical Survey</h3>
-         <p>Geophysical Survey is the process of collecting and analyzing data on the physical properties of the earth, such as its composition and structure, using various geophysical techniques.</p>
-      </div>
-
-      <div class="box">
-         <img src="images/service-3.png" alt="Drafting Service">
-         <h3>Topographical Survey</h3>
-         <p>Topographical Survey is the process of collecting and analyzing data on the features and contours of a site, such as its elevations, slopes, and vegetation, to create a detailed map of the area. This service involves using specialized equipment to measure and record the topographical features of a site, and creating a map that accurately represents these features.</p>
-      </div>
-
-      <div class="box">
-         <img src="images/service-7.png" alt="Drafting Service">
-         <h3>Detailed Engineering Design</h3>
-         <p>This service involves analyzing the technical and operational requirements of a project, and developing detailed design plans that meet these requirements. It is aimed at helping clients design systems and projects that are safe, efficient, and meet the needs of their users.</p>
-      </div>
-
-      <div class="box">
-         <img src="images/service-6.png" alt="Geotechnical Design">
-         <h3>Structural Design</h3>
-         <p>Structural Design is the process of designing and engineering the structural components of a building or structure, such as its foundations, walls, beams, and columns, to ensure its stability and safety. This service involves analyzing the loads and forces acting on a structure, and designing appropriate structural elements to resist these loads and forces.</p>
-      </div>
-
+       <div class="swiper-slide slide">
+         <div class="image">
+           <img src="images/Lab-1.jpg" alt="" />
+         </div>
+         <div class="content">
+           <h3>Uji Lab Mektan</h3>
+           <p>
+             untuk mengetahui sifat dan karakteristik tanah, Hasil dari uji laboratorium akan di korelasikan dengan hasil uji lapangan sehingga dapat didesain dimensi pondasi yang aman dan efisien.
+           </p>
+           <a href="https://wa.me/6281770719933 " class="btn">order jasa lab <i class="fab fa-whatsapp"></i></a>
+         </div>
+     </div>
    </div>
-
-</section>
-
-<!-- services section ends -->
+ </section>
+ <!-- service section ends -->
 
 
 
