Update border radius btn

--- a/about.html
+++ b/about.html
@@ -207,6 +207,17 @@
 
     <!-- mvv section ends -->
 
+    <!-- WhatsApp Button -->
+    <div class="whatsapp-button">
+      <a
+        href="https://wa.me/6281770719933  "
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <img src="images/whatsapp-icon.png" alt="WhatsApp Icon" />
+      </a>
+    </div>
+
     <!-- footer section starts -->
 
     <section class="footer">
