--- a/contact.html
+++ b/contact.html
@@ -102,28 +102,33 @@
 
 <!-- contact section starts  -->
 
-<section class="contact" id="contact1">
-
-   <h1 class="heading"> contact us </h1>
+<section class="contact" id="contact">
+   <h1 class="heading">contact us</h1>
 
    <div class="row">
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.8530222222453!2d106.917887109896!3d-6.283044193679571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e698d4ef794b2a7%3A0x506cc32ad1421286!2sJl.%20Gelatik%20No.10%2C%20RT.002%2FRW.002%2C%20Jatimakmur%2C%20Kec.%20Pd.%20Gede%2C%20Kota%20Bks%2C%20Jawa%20Barat%2017411!5e0!3m2!1sid!2sid!4v1706106838371!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d294.36359165620723!2d107.64792623109494!3d-6.953916369695515!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd981be63a405bea0!2sPT.%20Gamma%20Sinergy%20Consultant!5e0!3m2!1sid!2sid!4v1666003341298!5m2!1sid!2sid" width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-      <form action="form-action.php" method="post">
-         <h3>get touch</h3>
-         <input type="text" placeholder="Name" name="name" class="box">
-         <input type="email" placeholder="Email" name="email" class="box">
-         <input type="number" placeholder="Phone" name="phone" class="box">
-         <textarea placeholder="Message" name="message" class="box" id="" cols="30" rows="10" required ></textarea>
-         <input type="submit" value="send message" class="btn" name="send">
-      </form>
-
+     <form action="form-action.php" method="post">
+       <h3>Jasa Sondir & Konsultan Geoteknik</h3>
+       <input type="text" placeholder="Name" name="name" class="box" />
+       <input type="email" placeholder="Email" name="email" class="box" />
+       <input type="number" placeholder="Phone" name="phone" class="box" />
+       <textarea
+         placeholder="Message"
+         name="message"
+         class="box"
+         id=""
+         cols="30"
+         rows="10"
+         required
+       ></textarea>
+       <input type="submit" value="send message" class="btn" name="send" />
+     </form>
    </div>
+ </section>
 
-</section>
+ <!-- contact section ends -->
 
-<!-- contact section ends -->
 <!-- client logo section starts -->
 
 <section class="logo-container">
@@ -174,7 +179,13 @@
 
 
 
-
+    <!-- WhatsApp Button -->
+    <div class="whatsapp-button">
+      <a href="https://wa.me/6281770719933  " target="_blank" rel="noopener noreferrer">
+        <img src="images/whatsapp-icon.png" alt="WhatsApp Icon">
+      </a>
+    </div>
+  
 
  <!-- footer section starts -->
 
