--- a/services.html
+++ b/services.html
@@ -191,7 +191,12 @@
 
 
 
-
+    <!-- WhatsApp Button -->
+    <div class="whatsapp-button">
+      <a href="https://wa.me/6281770719933  " target="_blank" rel="noopener noreferrer">
+        <img src="images/whatsapp-icon.png" alt="WhatsApp Icon">
+      </a>
+    </div>
 
  <!-- footer section starts -->
 
