Update projecs section, service content

--- a/index.html
+++ b/index.html
@@ -502,8 +502,13 @@ Ensure the safety and stability of your construction project with our experience
             </div>
             <i class="fas fa-plus"></i>
           </div>
-        </a>
+        </a>  
       </div>
+
+      <div class="see-more-container">
+        <a href="projects.html" class="see-more-btn" target="_blank">See More...</a>
+      </div>
+
     </section>
 
     <!-- projects section ends  -->
