--- a/services.html
+++ b/services.html
@@ -101,14 +101,17 @@
 
 <!-- services section starts  -->
 
+
+
 <section class="services-2" id="services2">
    <div class="box-container2">
       <h3>As a Civil Engineering Specialist Consultant</h3>
       <hr class="hr">
-      <p>Established in Bandung on October 1, 2019, GSC is a manifestation of the desire of its founders to play an active role in National Development in Indonesia by contributing their works and ideas in the form of technical consulting services as partners with the government and private parties. Despite the relatively young age of GSC, GSC offers reliable and experienced experts and support staff in various fields and continues to develop our thinking to find innovative and sustainable solutions for each client's problems. In addition, GSC has good relations with universities and other consultants (national or international), enabling GSC to offer quality Surveying and Engineering Services.</p>
+      <p>Gamma Solusi Optima (GSO) was established in Bekasi on October 1, 2019. It embodies the aspirations of its founders to actively contribute to National Development in Indonesia by providing technical consulting services in collaboration with government and private entities. Despite our relatively young age, GSO boasts a team of reliable and experienced experts across various fields. We continually develop innovative and sustainable solutions to address the unique challenges faced by each client.</p>
       <p>
-         Initially had core business in Civil Engineering Detailed Engineering Design and Surveys; Currently, GSC provides road & airport planning, mining infrastructure, oil & gas facilities, industrial facilities, and others. GSC has grown rapidly since 2019, completing more than 20 foundation-related projects, including several national strategic projects such as Ahmad Yani International Airport, Karanglo Underpass, Balikpapan Bay Toll Road, Jakarta-Cikampek Toll Road, Cisumdawu Toll Road, Jetty Coal Buntok, Tawang Mosque PT. KAI, Damai Bridge, Plaza Statue Ir. Soekarno, PLTU Suralaya, West Java II Road and Bridge, Jambi-Rengat Toll Road, and entered into overlapping contracts.
+         Initially focused on Civil Engineering Detailed Engineering Design and Surveys, GSO has diversified its services. Presently, we offer expertise in road and airport planning, mining infrastructure, oil and gas facilities, industrial facilities, and more. Since our inception in 2019, GSO has experienced rapid growth, successfully completing over 20 foundation-related projects. Some notable projects include Ahmad Yani International Airport, Karanglo Underpass, Balikpapan Bay Toll Road, Jakarta-Cikampek Toll Road, Cisumdawu Toll Road, Jetty Coal Buntok, Tawang Mosque PT. KAI, Damai Bridge, Plaza Statue Ir. Soekarno, PLTU Suralaya, West Java II Road and Bridge, Jambi-Rengat Toll Road, among others. We have also engaged in collaborative contracts to further expand our impact.
       </p>
+   </div>
    </div>
 
    
