Update projects section

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ Ensure the safety and stability of your construction project with our experience
           </div>
           <div class="content">
             <div class="info">
-              <h3>Jembatan Ambit Sumedang</h3>
+              <h3>Jembatan Ambit</h3>
               <p>Sumedang</p>
             </div>
             <i class="fas fa-plus"></i>
@@ -498,7 +498,7 @@ Ensure the safety and stability of your construction project with our experience
           <div class="content">
             <div class="info">
               <h3>Amanda Mart</h3>
-              <p>Ciwastra, Buahbatu, Kota.Bandung</p>
+              <p>Ciwastra, Bandung</p>
             </div>
             <i class="fas fa-plus"></i>
           </div>
