Add google ads code

--- a/index.html
+++ b/index.html
@@ -943,6 +943,14 @@ Ensure the safety and stability of your construction project with our experience
     </section>
 
     <!-- footer section ends -->
+
+    <!-- Tempatkan kode iklan di dalam elemen div atau tempat yang sesuai di halaman Anda -->
+    <div id="google-ad">
+      <!-- Kode Iklan Google AdSense akan ditempatkan di sini -->
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2834825991629149"
+     crossorigin="anonymous"></script>
+    </div>
+
     <script>
       // Get the form element
       var form = document.getElementById("form");
