--- a/services.html
+++ b/services.html
@@ -274,7 +274,12 @@
 
 
 
-
+<!-- Tempatkan kode iklan di dalam elemen div atau tempat yang sesuai di halaman Anda -->
+<div id="google-ad">
+  <!-- Kode Iklan Google AdSense akan ditempatkan di sini -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2834825991629149"
+ crossorigin="anonymous"></script>
+</div>
 
 
 
