--- a/about.html
+++ b/about.html
@@ -289,6 +289,13 @@
 
     <!-- footer section ends -->
 
+    <!-- Tempatkan kode iklan di dalam elemen div atau tempat yang sesuai di halaman Anda -->
+    <div id="google-ad">
+      <!-- Kode Iklan Google AdSense akan ditempatkan di sini -->
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2834825991629149"
+     crossorigin="anonymous"></script>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
