--- a/projects.html
+++ b/projects.html
@@ -680,7 +680,12 @@
 
  <!-- footer section ends -->
 
-
+<!-- Tempatkan kode iklan di dalam elemen div atau tempat yang sesuai di halaman Anda -->
+<div id="google-ad">
+   <!-- Kode Iklan Google AdSense akan ditempatkan di sini -->
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2834825991629149"
+  crossorigin="anonymous"></script>
+ </div>
 
 
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
