Add google ads code di bagian head

--- a/about.html
+++ b/about.html
@@ -31,6 +31,11 @@
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Kode Iklan Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2834825991629149"
+     crossorigin="anonymous"></script>
+
   </head>
   <body>
     <!-- header section starts  -->
